# adk-python

./: .env.example  .gitignore  QUICK_REFERENCE.md  SUCCESS.md  SYSTEM_FLOW.md  diagnose-setup.ps1  docker-compose.yml  issue.md  pyproject.toml  quick-start-adk-web.ps1  quick-start.ps1  start-adk-web.ps1
.cache/bigquery_schemas/: woven-art-475517-n4_dnb_public_register.json  woven-art-475517-n4_dnb_statistics.json
.github/prompts/: plan-adkWebFirebaseDeployment.prompt.md  test.md
_archive/: deploy_dnb_data_to_bigquery.md
backend/: ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_ENHANCEMENTS.md  ARCHITECTURE_MERMAID.md  INTEGRATION_PLAN.md  JAEGER_TASKS.md  README.md  TASKS_GUIDE.md
backend/adk/: ACTION_PLAN.md  ADK_SAMPLES_INTEGRATION.md  ADK_SAMPLES_INTEGRATION_SUMMARY.md  ADK_SAMPLES_QUICK_REFERENCE.md  ADK_WEB_SETUP.md  ADOPTION_STRATEGY.md  ADOPT_DATA_SCIENCE_AGENT.md  AGENT_ARCHITECTURE_ANALYSIS.md  AGENT_ARCHITECTURE_DIAGRAM.md  AGENT_IMPLEMENTATION_EXAMPLES.md  AGENT_IMPLEMENTATION_SUMMARY.md  QUICK_START_ADK_SAMPLES.md  README_ADK_SAMPLES.md  adk_patch.py  diagnose-setup.ps1  openapi_to_toolbox_agent.py  run_data_science_agent.py  run_dnb_openapi_agent.py  simple_agent.ipynb  simple_dnb_agent.py  start-adk-web.ps1  stop-adk-web.ps1  test_data_science.py
backend/agentbox/: openapi_to_toolbox.py  openapi_to_toolbox_agent.py
backend/clients/: KIOTA_SETUP.md  README.md  __init__.py  echo_client.py  public_register_client.py  statistics_client.py  test_dnb_clients.py
backend/docs/: Solven – ECDAP’s Agentic AI Assistant.docx
backend/etl/: SCHEMA_EXPORT_GUIDE.md  dnb_statistics_etl.py  export_schemas.py  field_description_loader.py  field_descriptions.yaml  run_dnb_pr_etl.py  run_dnb_stats_etl.py  test_field_descriptions.py
backend/gcp/: MULTI_DATASOURCE_ARCHITECTURE.md  __init__.py  auth.py  bigquery_manager.py  datasource_config.py  setup.py  storage_manager.py  upload_dnb_statistics.py  upload_parquet.py
backend/genai-mcp-toolbox/: .env.example  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/genai-toolbox/: docker-compose.dev.yml  docker-compose.prod.yml  package.json  validate_config.py
backend/mcp-toolbox/: colab_quickstart.ipynb
backend/open-api-box/: openapi_toolbox.py
backend/scripts/: adk-check-data-science-upstream.ps1  adk-compare-data-science-upstream.ps1  adk-pull-data-science-upstream.ps1  adopt-adk-sample.ps1  diagnose-setup.ps1  generate-dnb-clients.ps1  generate_dnb_clients.py  git-clean-remote-tracking.ps1  git-tighten-fetch.ps1  load-env.ps1  quick-start.ps1  rebuild-toolbox.ps1  setup-google-auth-clean.ps1  setup-google-auth.ps1  start-adk-web.ps1  (+2 more)
config/: tools.yaml
docs/: agents_recommendations.md  cloud_deploy.md  cloud_deployment_plan.md
scripts/: dev.py
(+531 files in other folders)
