[tool.poetry]
name = "orkhon"
version = "0.1.0"
description = ""
authors = ["Px8Studio <info@px8.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toolbox-langchain = "^0.5.2"
langchain-google-vertexai = "^2.1.2"
langgraph = "^0.6.10"
google-adk = "^1.16.0"
uv = "^0.9.3"
toolbox-core = "^0.5.2"
# Kiota dependencies for HTTP clients
microsoft-kiota-abstractions = "^1.7.0"
microsoft-kiota-http = "^1.7.0"
microsoft-kiota-serialization-json = "^1.7.0"
microsoft-kiota-serialization-text = "^1.7.0"
microsoft-kiota-serialization-form = "^1.7.0"
microsoft-kiota-serialization-multipart = "^1.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
